- Added the workflow note field to the quick actions in the inbox. The note field is only displayed when required by the step settings.
- Added support for editable fields on the User Input step with calculations based on non-editable and/or non-display fields.
- Added the gravityflow_columns_status_table filter to allow the columns to be filtered on the status table.
- Added support for first, latest, and limit modifiers on the Discussion field merge tag e.g. {label:2:first}, {label:2:latest}, and {label:2:limit=3}.
- Added a class name to the entry detail table for the current step.
- Updated the note for expired steps to include the step name.
- Updated step conditional logic to support rules based on entry meta and properties.
- Updated the User and Role type fields so the step conditional logic rule value will use the choice drop down instead of text input.
- Fixed some strings for translation.
- Fixed a php notice when printing entries.
- Fixed Discussion field merge tag not returning content when used in the step instructions.
- API: Fixed an issue with the add-on slug which prevents feed interception for third party add-ons.
- Fixed a JS error on the entry detail page when a User Input step has an editable Chained Select field and conditional logic is not enabled.