@@ -3,6 +3,7 @@
 - Added the gravityflow_columns_status_table filter to allow the columns to be filtered on the status table.
 - Added support for first, latest, and limit modifiers on the Discussion field merge tag e.g. {label:2:first}, {label:2:latest}, and {label:2:limit=3}.
 - Added a class name to the entry detail table for the current step.
+- Added "Cancelled" to the final status entry meta options available in entry filters.
 - Updated the note for expired steps to include the step name.
 - Updated step conditional logic to support rules based on entry meta and properties.
 - Updated the User and Role type fields so the step conditional logic rule value will use the choice drop down instead of text input.
